--- a/english.html
+++ b/english.html
@@ -25,7 +25,7 @@
                     <li><a href="#type1">Type 1</a></li>
                     <li><a href="#loop1">Loop</a></li>
                     <li><a href="#peerSupport">Peer Support</a></li>
-                    <li><a href="#index.html">FR</a></li>
+                    <li><a href="index.html">FR</a></li>
                 </ul>
 
                 <div class="burger">
