--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li><a href="#type1">Type 1</a></li>
                     <li><a href="#loop1">Loop</a></li>
                     <li><a href="#peerSupport">Peer Support</a></li>
-                    <li><a href="#">EN</a></li>
+                    <li><a href="workinprogress.html">EN</a></li>
                 </ul>
 
                 <div class="burger">
@@ -104,7 +104,7 @@
             </div>
             <div class="fact3 flex">
                 <p>Charge mentale importante :
-                80 décisions thérapeutiques prises par jour</p>
+                80 décisions thérapeutiques prises en moyenne par jour</p>
             </div>
             <div class="fact4 flex">
                 <img src="images/AppleWatch.png" alt="CGM-Apple-watch">
@@ -128,7 +128,7 @@
                 - soif intense<br>
                 - énurésie<br>
                 - perte de poids<br>
-                - coma acido-céctosique</p>
+                - coma acido-cétosique</p>
             </div>
         </div>
     </section>
@@ -138,7 +138,7 @@
 
         <div class="paragraph flex column">
             <h2 class="">LOOP</h2>
-            <p>L’aventure des boucles fermées DIY, aussi appelées <span>pancréas artificiels DIY</span>, a commencé en 2013. Dana Lewis a d'abord créé une solution pour rendre les alarmes de son capteur de glucose en continu plus bruyantes. En un an, elle a réussi à "fermer la boucle" et à créer un système hybride en boucle fermée pour automatiser les micro-ajustements de l'administration d'insuline. Elle s'est ensuite tournée vers le monde de l'Open Source pour permettre à d'autres de construire eux-mêmes leurs propres systèmes.
+            <p>L’aventure des boucles fermées DIY, aussi appelées <span>pancréas artificiels DIY</span>, a commencé en 2013. Dana Lewis a d'abord créé une solution pour rendre plus bruyantes les alarmes de son capteur de glucose en continu. En un an, elle a réussi à "fermer la boucle" et à créer un système hybride en boucle fermée pour automatiser les micro-ajustements de sa pompe à insuline. Elle s'est ensuite tournée vers le monde de l'Open Source pour permettre à d'autres de construire eux-mêmes leurs propres systèmes.
             <br><br>
             Les <span>boucles fermées</span> sont le graal pour les personnes qui vivent avec un diabète de type 1. Elles permettent une amélioration considérable de la qualité de vie, à court et long terme : moins d’hypoglycémies et d’hyperglycémies, plus de temps dans la cible glycémique, une réduction de l’hbA1c, la possibilité de faire du sport plus facilement, de dormir mieux la nuit, et d’<span>alléger la charge mentale</span>.
             </p>
@@ -160,7 +160,7 @@
             <br><br>
             Le système réunit :<br>
             - une pompe à insuline<br>
-            - un capteur de glucose continu<br>
+            - un capteur de glucose en continu<br>
             - un algorithme de dosage de l'insuline<br> 
             - un iPhone et/ou une Apple watch<br>
             - une <span>RileyLink</span>, petit boitier qui connecte l’ensemble par communication radio et Bluetooth<br>
@@ -169,7 +169,7 @@
             </p>
 
             <button class="button flex column">
-                <a href="https://loopkit.github.io/loopdocs/" target="blank">EN SAVOIR PLUS</a>
+                <a href="https://loopkit.github.io/loopdocs/" target="blank" style = "text-decoration: none; color:#02505A">EN SAVOIR PLUS</a>
             </button>
         </div>
  
@@ -191,12 +191,12 @@
         <div class="paragraph flex column">
             <h2 class="">PEER SUPPORT</h2>
     
-            <p>La communauté <span>#WeAreNotWaiting</span>, ce sont des personnes qui vivent dans le monde entier, qui s’entraident au quotidien via les réseaux sociaux, des rencontres également, avant que le Covid ne vienne entrer dans la danse. Construire sa propre application Loop ou OpenAPS, parce qu’expérimentale, est souvent précédé d’un long cheminement mental. Il faut ensuite rassembler les éléments, dont certains peuvent s’avérer difficiles à obtenir, comme les anciennes pompes à insuline ayant un firmware compatible.
+            <p>La communauté <span>#WeAreNotWaiting</span>, ce sont des personnes du monde entier, qui s’entraident au quotidien via les réseaux sociaux, des rencontres également, avant que le Covid ne vienne entrer dans la danse. Prendre la décision de construire sa propre application Loop ou OpenAPS, parce qu’expérimentale, est souvent précédé d’un long cheminement mental. Il faut ensuite rassembler les éléments, dont certains peuvent s’avérer difficiles à obtenir, comme les anciennes pompes à insuline ayant un firmware compatible.
             <br><br>
             C’est aussi un réel challenge de construire sa propre application, installer <span> Homebrew</span>, se familiariser avec <span>Xcode</span>, <span>GitHub</span>, gérer ses propres données dans le cloud en construisant un site <span>NightScout</span>, l’une des pierres angulaires des systèmes de boucles fermées DIY.
             <br><br>
-            Les pionniers de ces systèmes de pancréas artificiels se sont entraidés, ont transmis leur expérience et leur expertise. Cette volonté de <span>partage</span>, par et pour les patients, est l’essence même de la communauté.<br>
-            Un grand merci à toutes ces femmes inspirantes : Dana, Callie, Katie, Hanne, Melody, Andrea, Adriana, Katarina, Melissa, Mary Anne, Renza, Saskia, Justine, Maite, Dawn.
+            Les pionniers de ces systèmes de pancréas artificiels se sont entraidés, et ont transmis leur expérience et leur expertise. Cette volonté de <span>partage</span>, par et pour les patients, est l’essence même de la communauté.<br>
+            Un grand merci à toutes ces femmes inspirantes qui la font vivre aujourd'hui : Dana, Callie, Katie, Hanne, Melody, Andrea, Adriana, Katarina, Melissa, Mary Anne, Renza, Saskia, Justine, Maite, Dawn, et tant d'autres.
             </p>
         </div>
     </section>
