--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="paragraph flex column">
             <h2 class="">CODEUSES</h2>
 
-            <P>Big Up à toutes ces femmes qui ont utilisé la programmation pour hacker du matériel médical et ainsi permettre à leurs proches, elles-mêmes, et des personnes vivant dans le monde entier, à devenir acteurs de leur maladie, à vivre mieux au quotidien, et plus longtemps. <br><br>
+            <P>Big Up à toutes ces femmes qui ont utilisé la programmation pour hacker du matériel médical et ainsi permettre à leurs proches, elles-mêmes, et des personnes vivant dans le monde entier, de devenir acteurs de leur maladie, de vivre mieux au quotidien, et plus longtemps. <br><br>
             Grâce à l’<span>Open Source</span> et à la communauté <span>#WeAreNotWaiting</span>, elles ont rendu accessible à celles et ceux qui sont prêts à relever le challenge, une technologie que les laboratoires pharmaceutiques mettent beaucoup de temps à élaborer, et dont ils prennent exemple aujourd’hui.
             <br><br>
             Ces femmes extraordinaires, qui font avancer l’innovation par, et pour les patients, en ayant conçu ou en contribuant à améliorer le <span>pancréas artificiel DIY</span>, sont Dana Lewis, Katie Disimone, Cal Young, pour n’en citer que quelques-unes.
@@ -156,7 +156,7 @@
         <div class="paragraph flex column">
             <p>Loop est une <span>application iOS</span> qui a été développée et partagée en Open Source. C’est un travail de longue haleine réalisé par une communauté d’utilisateurs. Il est maintenu et amélioré en permanence par des bénévoles.
             <br><br>
-            L’application Loop est un système d'administration d’insuline qui utilise des technologies hardware et software commerciales et open source.
+            L’application Loop est un système d'administration d’insuline qui utilise des technologies hardware et software commerciales et Open Source.
             <br><br>
             Le système réunit :<br>
             - une pompe à insuline<br>
