--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <P>Big Up à toutes ces femmes qui ont utilisé la programmation pour hacker du matériel médical et ainsi permettre à leurs proches, elles-mêmes, et des personnes vivant dans le monde entier, de devenir acteurs de leur maladie, de vivre mieux au quotidien, et plus longtemps. <br><br>
             Grâce à l’<span>Open Source</span> et à la communauté <span>#WeAreNotWaiting</span>, elles ont rendu accessible à celles et ceux qui sont prêts à relever le challenge, une technologie que les laboratoires pharmaceutiques mettent beaucoup de temps à élaborer, et dont ils prennent exemple aujourd’hui.
             <br><br>
-            Ces femmes extraordinaires, qui font avancer l’innovation par, et pour les patients, en ayant conçu ou en contribuant à améliorer le <span>pancréas artificiel DIY</span>, sont Dana Lewis, Katie Disimone, Cal Young, pour n’en citer que quelques-unes.
+            Ces femmes extraordinaires, qui font avancer l’innovation par, et pour les patients, en ayant conçu ou en contribuant à améliorer le <span>pancréas artificiel DIY</span>, sont Dana, Katie, Cal, pour n’en citer que quelques-unes.
             </P>
         </div>
 
