--- a/index.html
+++ b/index.html
@@ -207,7 +207,11 @@
           
             <a href="https://www.instagram.com/1derfultype/" target="blank" class="instagram"><img src="images/instagramFFFFF4.png" alt="instagram-icon"></a>
 
-            <a href="https://www.linkedin.com/in/nathaliepiat" target="blank" class="copyright">Copyright © 2021 Nathalie Piat - tous droits réservés</a>
+            <ul class="credits">
+                <li><a href="https://obeygiant.com/" target="blank" class="obey">Crédit illustrations : Obey</a></li>
+                <li><a href="https://www.linkedin.com/in/nathaliepiat" target="blank">Crédit photographies : Nathalie Piat</a></li>
+                <li><a href="https://www.linkedin.com/in/nathaliepiat" target="blank" class="copyright">Copyright © 2021 Nathalie Piat - tous droits réservés</a></li>
+            </ul>    
         </footer>
     </section>
 
