--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li><a href="#type1">Type 1</a></li>
                     <li><a href="#loop1">Loop</a></li>
                     <li><a href="#peerSupport">Peer Support</a></li>
-                    <li><a href="workinprogress.html">EN</a></li>
+                    <li><a href="english.html">EN</a></li>
                 </ul>
 
                 <div class="burger">
@@ -52,11 +52,11 @@
         <div class="paragraph flex column">
             <h2 class="">CODEUSES</h2>
 
-            <P>Big Up à toutes ces femmes qui ont utilisé la programmation pour hacker du matériel médical et ainsi permettre à leurs proches, elles-mêmes, et des personnes vivant dans le monde entier, de devenir acteurs de leur maladie, de vivre mieux au quotidien, et plus longtemps. <br><br>
+            <p>Big Up à toutes ces femmes qui ont utilisé la programmation pour hacker du matériel médical et ainsi permettre à leurs proches, elles-mêmes, et des personnes vivant dans le monde entier, de devenir acteurs de leur maladie, de vivre mieux au quotidien, et plus longtemps. <br><br>
             Grâce à l’<span>Open Source</span> et à la communauté <span>#WeAreNotWaiting</span>, elles ont rendu accessible à celles et ceux qui sont prêts à relever le challenge, une technologie que les laboratoires pharmaceutiques mettent beaucoup de temps à élaborer, et dont ils prennent exemple aujourd’hui.
             <br><br>
             Ces femmes extraordinaires, qui font avancer l’innovation par, et pour les patients, en ayant conçu ou en contribuant à améliorer le <span>pancréas artificiel DIY</span>, sont Dana, Katie, Cal, pour n’en citer que quelques-unes.
-            </P>
+            </p>
         </div>
 
         <img src="images/Triangle.png" alt="triangle" class="triangle hide">
@@ -93,17 +93,18 @@
 
         <div class="facts flex">
             <div class="fact1 flex">
-                <p>Augmentation depuis 20 ans de 4% de cas par an avec une prévalence importante chez les moins de 5 ans</p>
+                <p><br><br>Augmentation depuis 20 ans de 4% de cas par an avec une prévalence importante chez les moins de 5 ans</p>
             </div>
             <div class="fact2 flex">
                 <img src="images/InsulinPump.png" alt="insulin-pump-on-bag">
-                <p>Causes de l’attaque auto-immune :<br>
-                - génétiques<br>
-                - environnementales<br>
-                - infections par entérovirus</p>
+                <ul>Causes de l’attaque auto-immune :<br>
+                    <li>- génétiques</li>
+                    <li>- environnementales</li>
+                    <li>- infections par entérovirus</li>
+                </ul>
             </div>
             <div class="fact3 flex">
-                <p>Charge mentale importante :
+                <p>Charge mentale importante<br><br>
                 80 décisions thérapeutiques prises en moyenne par jour</p>
             </div>
             <div class="fact4 flex">
@@ -115,20 +116,21 @@
                 <p>Centenaire cette année de la découverte de l’insuline, en 1921</p>
             </div>
             <div class="fact6 flex">
-                <p>“Population fantôme” :<br> 
-                pour 2 personnes qui vivent avec le type 1, une 3ème devrait être en vie si elle avait eu accès à des soins médicaux</p>
+                <p><br>“Population fantôme”<br><br>
+                Pour 2 personnes qui vivent avec le type 1, une 3ème devrait être en vie si elle avait eu accès à des soins médicaux</p>
             </div>
             <div class="fact7 flex">
                 <img src="images/RileyLink.png" alt="RileyLink">
                 <p>Augmentation depuis 20 ans de 4% de cas par an avec une prévalence importante chez les moins de 5 ans</p>
             </div>
             <div class="fact8 flex">
-                <p>Signes cliniques :<br>
-                - fatigue anormale<br>
-                - soif intense<br>
-                - énurésie<br>
-                - perte de poids<br>
-                - coma acido-cétosique</p>
+                <ul><br>Signes cliniques : <br><br>
+                    <li>- fatigue anormale</li>
+                    <li>- soif intense</li>
+                    <li>- énurésie</li>
+                    <li>- perte de poids</li>
+                    <li>- coma acido-cétosique</li>
+                </ul>
             </div>
         </div>
     </section>
