--- a/english.html
+++ b/english.html
@@ -167,7 +167,7 @@
             - an iPhone and/or an Apple watch<br>
             - a <span>RileyLink</span>, a little device that helps them speak to each other by radio communication and Bluetooth<br>
             <br><br>   
-            The <span>algorithm</span> predits future glucose based on basal-rate schedules, carbohydrate intake, insulin on board, and current CGM readings. These glucose forecasts provide the app with the information needed to recommend a temporary basal rate to attain a targeted glucose range in the future.
+            The <span>algorithm</span> predicts future glucose based on basal-rate schedules, carbohydrate intake, insulin on board, and current CGM readings. These glucose forecasts provide the app with the information needed to recommend a temporary basal rate to attain a targeted glucose range in the future.
             </p>
 
             <button class="button flex column">
